[tool.poetry]
name = "block-signal-generator"
version = "0.1.0"
description = ""
authors = ["Julian B. <jeriox@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "block_signal_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pylint = "^2.15.10"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
